--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -124,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "recipe-app"
+  "defaultProject": "recipe-app",
+  "cli": {
+    "analytics": "33d3a433-9711-4a4f-a0a5-3b0cf6146907"
+  }
 }
